# modelship

./: CHANGELOG.md  README.md  package-lock.json  package.json  pyproject.toml  tasks.py
.github/workflows/: ci-cd.yml  lockfile.yml
demo/sentiment/: model.onnx
modelship/: cli.py
modelship/static/: ortworker.js
modelship/templates/: onnx_runtime_web.html
tests/: test_cli.py
tests/fixtures/: model.onnx
