[project]
name = "modelship"
description = "Ship machine learning models in minutes, not months"
readme = "README.md"
license = { text = "Apache-2.0" }
authors = [
    { name = "Romain Clement", email = "git@romain-clement.net" }
]
requires-python = ">=3.10,<3.14"
dependencies = [
    "jinja2>=3",
    "onnxruntime>=1",
    "pydantic>=2",
    "pyyaml>=6",
]
keywords = ["machine-learning", "deployment", "webassembly", "onnx"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Environment :: WebAssembly",
    "Framework :: Pydantic",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "Intended Audience :: Information Technology",
    "Intended Audience :: Other Audience",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: JavaScript",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development",
    "Topic :: Utilities",
    "Typing :: Typed",
]
dynamic = ["version"]

[project.urls]
Repository = "https://github.com/datalpia/modelship"
Issues = "https://github.com/datalpia/modelship/issues"
Changelog = "https://github.com/datalpia/modelship/blob/main/CHANGELOG.md"

[project.scripts]
modelship = "modelship.__main__:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "bandit==1.9.2",
    "invoke==2.2.1",
    "mypy==1.19.0",
    "pip-audit==2.10.0",
    "pytest==9.0.1",
    "pytest-cov==7.0.0",
    "ruff==0.14.7",
    "types-pyyaml==6.0.12.20250915",
]

[tool.hatch.version]
path = "modelship/__about__.py"